--- a/src/main/webapp/WEB-INF/about.html
+++ b/src/main/webapp/WEB-INF/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
 <div><b>Le concept Travaux et Services</b></div>
