--- a/src/main/webapp/WEB-INF/home.html
+++ b/src/main/webapp/WEB-INF/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
 <div><h2>A propos de Travaux et Services</h2></div>
