--- a/src/main/webapp/WEB-INF/home.html
+++ b/src/main/webapp/WEB-INF/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
-<div><h2>A propos de Travaux et Services</h2></div>
+<h2>A propos de Travaux et Services</h2>
 <div>Travaux et Services est un site de petites annonces gratuites de particuliers et professionnels. Vous pouvez passer
     une annonce gratuite ou consulter nos petites annonces dans différentes catégories...
 </div>
