--- a/src/main/webapp/WEB-INF/home.html
+++ b/src/main/webapp/WEB-INF/home.html
@@ -7,7 +7,8 @@
 <body>
 <h2>A propos de Travaux et Services</h2>
 <div>Travaux et Services est un site de petites annonces gratuites de particuliers et professionnels. Vous pouvez passer
-    une annonce gratuite ou consulter nos petites annonces dans différentes catégories...
+    une annonce gratuite ou consulter nos petites annonces dans différentes activités.
 </div>
+<div>Inscrivez-vous rapidement et gratuitement et commencez à échanger immédiatement avec les autres membres !</div>
 </body>
 </html>
